fix Y overflow

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -14,6 +14,6 @@ body {
 }
 
 .markdown-body {
-  overflow: hidden;
+  overflow-x: hidden;
   padding-top: 0px!important;
 }
